<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.hu.team.ntrapplication.activities.InlogActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gebruikersnaamtext"
        android:hint="@string/username"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="63dp"
        android:layout_alignLeft="@+id/wachtwoortext"
        android:layout_alignStart="@+id/wachtwoortext"
        android:layout_alignRight="@+id/wachtwoortext"
        android:layout_alignEnd="@+id/wachtwoortext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/wachtwoortext"
        android:hint="@string/password"
        android:layout_below="@+id/gebruikersnaamtext"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/inloggen"
        android:background="@drawable/buttonshape"
        android:id="@+id/loginbutton"
        android:onClick="loginUser"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:text="@string/register"
        android:id="@+id/button2"
        android:onClick="navigateToRegisterActivity"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/noaccount"
        android:textColor="@color/ntrblue"
        android:textStyle="bold"
        android:id="@+id/textView4"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:textColor="@color/ntrblue"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
